--- a/fuzzer/Cargo.toml
+++ b/fuzzer/Cargo.toml
@@ -23,7 +23,7 @@ wait-timeout = "0.2"
 twoway = "0.2.0"
 memmap = "0.7.0"
 rand = "0.7"
-inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"]  }
+inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "6801e0a69354aa06d2899e5733ea8d578fc503d4", features = ["llvm12-0"]  }
 blockingqueue = "0.1.1"
 z3 = "0.11.2"
 
